# GakkaNoKadai

./: README.md  assignment.md  index.html  package-lock.json  troubleshooting.sh  tsconfig.json
assets/models/: temp_gakka_sensor_case.blend
esp_rs/: Cargo.toml  memo_esp.md
esp_rs/.devcontainer/: devcontainer.json
esp_rs/docs/: README.md
esp_rs/scripts/: flash.sh
esp_rs/src/: fan_main.rs  sensor_main.rs
gas/: .gitignore  deploy.sh  index.html  package-lock.json  package.json  troubleshooting.sh  troubleshootings.sh
gas/src/: index.ts  test.sh
kicad/: Zatta.bak  Zatta.kicad_sym  denshi_kadai_3D_IoT.kicad_prl  denshi_kadai_3D_IoT.kicad_pro  denshi_kadai_3D_IoT.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
src/: appsscript.json
